UI/src/css/organisms/o-select-custom.css
.o-select-custom {
    display: inline-block;
    position: relative;

    o-list {
        block-size: 0;
        display: block;
        opacity: 0;
        position: absolute;
        width: 100%;
        z-index: 1;
    }

    .o-list {
        width: 100%;
    }

    &:focus-within {
        o-list {
            block-size: auto;
            margin-block-start: -1px;
            opacity: 1;
        }

        :where(.a-input-combobox, .a-input-dropdown) {
            border-end-end-radius: 0;
            border-end-start-radius: 0;
        }
    }

    /* TODO: Remove this once global :focus/:focus-visible styles have been setup */
    :where(.a-input-combobox, .a-input-dropdown):focus-visible {
        outline: none;
    }
}

